--- a/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_quiz.xml
@@ -26,21 +26,33 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button" />
     </LinearLayout>
-    <LinearLayout
+    <Button
+        android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-        <ImageButton
-            android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left"
-            />
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/arrow_right"
-            />
-    </LinearLayout>
+        android:text="@string/cheat_button" />
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button"
+        android:drawableRight="@drawable/arrow_right"
+        android:drawablePadding="4dp"/>
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal" >-->
+        <!--<ImageButton-->
+            <!--android:id="@+id/prev_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/arrow_left"-->
+            <!--/>-->
+        <!--<ImageButton-->
+            <!--android:id="@+id/next_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/arrow_right"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
 </LinearLayout>
